--- a/website_sale_wishlist_siki/views/shop.xml
+++ b/website_sale_wishlist_siki/views/shop.xml
@@ -1,36 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 
-        <template id="website_sale_wishlist.products_add_to_wishlist"
-          inherit_id="website_sale.products_item"
-          customize_show="True"
-          name="Add to Wishlist From List Extend">
-                <xpath expr="//form" position="before">
+        <template id="assets_frontend" inherit_id="website.assets_frontend" name="Shop">
+          <xpath expr="." position="inside">
 
-                    <t t-if="not website._compute_website_view()">
-                         <t t-call="website_sale_wishlist.product_toggle">
-                            <t t-set="extra_class" t-value="'btn-xs'"/>
-                         </t>
-                    </t>
-                 </xpath>
-                <!--<xpath expr="//*[@class='product_price']">-->
-                <xpath expr="//form//section[@id='section_list']//div[@name='prod_qty_value_and_buttons']" position="before">
-                    <t t-if="website._compute_website_view()">
-                        <t t-call="website_sale_wishlist.product_toggle">
-                            <t t-set="extra_class" t-value="'btn-xs'"/>
-                        </t>
-                    </t>
-                </xpath>
+             <!-- <link rel="stylesheet" href="/add_to_cart/static/src/css/qty_css.css"/> -->
+             <script type="text/javascript" src="/website_sale_wishlist_siki/static/src/js/wishlist_view.js"></script>
+          </xpath>
         </template>
 
+        <template id="products_add_to_wishlist_extend"
+          inherit_id="website_sale_wishlist.products_add_to_wishlist"
+          name="Agregar Lista de Favoritos">
 
+                <xpath expr="//section//div[@class='product_price']" position="replace"/>
 
+                <xpath expr="//section[2]//div[@name='prod_qty_value_and_buttons']" position="before">
+                    <t t-call="website_sale_wishlist.product_toggle">
+                        <t t-set="extra_class" t-value="'btn-xs'"/>
+                    </t>
+                </xpath>
+
+        </template>
 
         <template id="product_toggle_extend"
           name="Add to Wishlist Widget Extend"
           inherit_id="website_sale_wishlist.product_toggle">
             <xpath expr="//button" position="attributes">
-                <attribute name="t-att-style">'float: right;margin-top: 5px;margin-right:2%; z-index: 999;position: relative;' if not website._compute_website_view() else 'float: right;clear: both;'</attribute>
+                  <attribute name="t-att-style">'display: block;float: right;'</attribute>
             </xpath>
         </template>
 
